package edu.fiuba.algo3.model.Pista.NivelPista;

public class PistaDificil extends NivelPista {

    public PistaDificil(String nivel) {
        super(nivel);
    }
}
