package edu.fiuba.algo3.modelo.Pista.NivelPista;

public class PistaTodoNivel extends NivelPista {
    @Override
    public boolean esEquivalente(NivelPista nivel) {
        return true;
    }
}
